[Update]header要素を追加

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <body>
     <!-- header -->
     <header>
+      <h1 class="heading">
+        <a href="https://infratop.jp">
+          infratop
+        </a>
+      </h1>
 
     </header>
 
