--- a/index.html
+++ b/index.html
@@ -14,22 +14,36 @@
           infratop
         </a>
       </h1>
-
     </header>
 
     <!-- navigation -->
     <nav>
-
+      <ul class="nav-item">
+        <li class="nav-item-list">
+          <a href="https://infratop.jp">webcamp</a>
+        </li>
+        <li class="nav-item-list">
+          <a href="https://infratop.jp">webcamp pro</a>
+        </li>
+        <li class="nav-item-list">
+          <a href="https://infratop.jp">webcamp woman</a>
+        </li>
+        <li class="nav-item-list">
+          <a href="https://infratop.jp">webcamp career</a>
+        </li>
+      </ul>
     </nav>
 
 
     <!-- main用のclass -->
     <div class="main">
 
+
     </div>
 
-
+    <!-- footer用のclass -->
     <footer>
+      
 
     </footer>
 
