--- a/index.html
+++ b/index.html
@@ -37,14 +37,25 @@
 
     <!-- main用のclass -->
     <div class="main">
-
-
+      <div id="content1"></div>
+      <div id="content2"></div>
+      <div id="content3"></div>
+      <div id="content4"></div>
+      <div id="content5"></div>
+      <div id="content6"></div>
+      <div id="content7"></div>
+      <div id="content8"></div>
+      <div id="content9"></div>
+      <div id="content10"></div>
+      <div id="content11"></div>
+      <div id="content12"></div>
     </div>
+
+
 
     <!-- footer用のclass -->
     <footer>
-      
-
+      <p class="footer-text">&copy; All rights reserved by Infratop.Inc.</p>
     </footer>
 
 
